# IUU-detection

./: .gitignore  README.md
Predictor/Application/: README.rst  pyproject.toml
Predictor/Application/API/: pyproject.toml
Predictor/Application/API/api-predictor/: .dockerignore  Dockerfile  pyproject.toml
Predictor/Application/API/api-predictor/app/: lambda_function.py  main.py
Predictor/Application/API/api-predictor/app/models/: adjuster_corridor.pk1  model_corridor.py
Predictor/Application/API/api-predictor/app/models/H3/: h3_corredor.geojson
Predictor/Application/API/api-predictor/app/routes/: predict_corridor.py
Predictor/Application/API/api-predictor/app/schemas/: prediction_corridor.py
Predictor/Application/API/app/: lambda_function.py
Predictor/Application/API/app/models/: model_corridor.py
Predictor/Application/API/app/models/H3/: h3_loreto.geojson
Predictor/Application/API/app/schemas/: prediction_corridor.py
Predictor/Application/app/: main.py
Predictor/Application/app/models/: model_corridor.py
Predictor/Application/app/models/H3/: h3_cabo_pulmo.geojson
Predictor/Application/app/routes/: predict_corridor.py
Predictor/Application/prpi_application/: api.py  response_1701983252913(1).json
Predictor/Application/tests/: test_prpi_application.py
Predictor/Data Validation/: pyproject.toml
Predictor/Data Validation/datavalidation/: cnh3_unify_raster_layers_op.py
Predictor/Data Validation/prpi-datavalidation/: pyproject.toml
Predictor/Data Validation/prpi-datavalidation/tests/: test_prpi_datavalidation.py
Predictor/Data Validation/prpi_datavalidation/: cnD3_colorscale_webmap.html  create_dataset.py  download_m2_data.py  map_irreg.py  merge_datasets.py
Predictor/Data Validation/tests/: test_prpi_datavalidation.py
Predictor/Modeling/: pyproject.toml
Predictor/Modeling/tests/: test_prpi_modeling.py
ui/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx
ui/src/api/: auth.api.ts  http.api.ts
ui/src/assets/: fonts.css
ui/src/config/: authConfig.ts
ui/src/constants/: MenuStudentItems.tsx  Regex.ts  SiderItems.tsx  answers.ts  frontConfig.ts  globalStrings.ts  paths.ts  reports.ts  slices.ts  statuses.ts  uploadErrorsColums.ts
ui/src/hooks/: GetErrorMessage.tsx  GetSiderItems.tsx  MessageModal.tsx  createErrorFile.ts  downloadFile.ts  fileHelpers.ts  (+8 more)
(+93 files in other folders)
