[tool.poetry]
name = "prpi-application"
version = "0.1.0"
description = ""
authors = ["Oscar Nava <onava@causanatura.org>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
requests = "^2.31.0"
pandas = "^2.2.2"
geopandas = "^0.14.3"
uvicorn = "^0.29.0"
imblearn = "^0.0"
scikit-learn = "1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
