[tool.poetry]
name = "prpi-datavalidation"
version = "0.1.0"
description = ""
authors = ["Oscar Nava <onava@causanatura.org>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
geopandas = "^0.14.3"
plotly = "^5.20.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
