[tool.poetry]
name = "api-predictor"
version = "2.0"
description = ""
authors = ["Oscar Nava <onava@causanatura.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pandas = "^2.2.3"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
geopandas = "^1.0.1"
imblearn = "^0.0"
scikit-learn = "1.2.2"
numpy = "1.26.4"
mangum = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
